更改命名以及顺序

--- a/35-class类/1-分析class.html
+++ b/35-class类/1-分析class.html
@@ -12,7 +12,7 @@
   在 ES5 及之前的版本中，JavaScript 中 使用 构造函数 来创建 对象，
   然后 通过 new关键字 来调用，从而 创建 并 初始化 新对象。 <br><br>
 
-  什么是 class <br><br>
+  <h2>什么是 class</h2>
 
   ES6 引入了 Class (类) 这个概念，作为 对象 的 模板 。 <br><br>
 
@@ -20,7 +20,7 @@
 
   class 底层 是基于 ES5中 已有的原型继承机制 实现 的 语法糖。 <br><br>
 
-  为什么出现会 class <br><br>
+  <h2>为什么出现会 class</h2>
 
   ES6 中 引入 的 class 主要是为了 提供一种 更接近于 传统面向对象编程语言 的 语法结构，
   使得 JavaScript 的 面向对象编程 更加 简洁、清晰、易读。 <br><br>
@@ -31,7 +31,7 @@
 
     // 使用 构造函数 来创建 对象，并 实例化对象 
 
-    // 创建 Phone 构造函数 ，并设置 name、price 属性
+    // 1、创建 Phone 构造函数 ，并设置 name、price 属性
     function Phone(name, price) {
 
       this.name = name;
@@ -40,14 +40,14 @@
 
     }
 
-    // 为 Phone构造函数 添加 call()方法, 从 构造函数 的 原型对象上 添加，可做到 复用
+    // 2、为 Phone构造函数 添加 call()方法, 从 构造函数 的 原型对象上 添加，可做到 复用
     Phone.prototype.call = function () {
 
       console.log('我的手机是' + this.name + ', 买它花了我' + this.price + '元');
 
     }
 
-    // 使用 new 关键字 来 实例化 Person 
+    // 3、使用 new 关键字 来 实例化 Person 
     let xiaomi = new Phone('xiaomi', 4999);
 
     console.log(xiaomi);     // Phone {name: 'xiaomi', price: 4999}
@@ -78,13 +78,13 @@
     }
 
     // // 使用 new 关键字 来 实例化 Phone 
-    let xiaomi = new Phone('xiaomi', 4999);
+    let redmi = new Phone('redmi', 4999);
 
-    console.log(xiaomi);  // Phone {name: 'xiaomi', price: 4999}
+    console.log(redmi);  // Phone {name: 'redmi', price: 4999}
 
-    console.log(typeof xiaomi);   // object
+    console.log(typeof redmi);   // object
 
-    xiaomi.call();   // 我的手机是 xiaomi , 买它花了我 4999 元
+    redmi.call();   // 我的手机是 redmi , 买它花了我 4999 元
 
     // 类本身 就指向 构造函数
     console.log(Phone === Phone.prototype.constructor);    // true      
