--- a/35-class类/7-使用构造函数的形式来模拟类的继承.html
+++ b/35-class类/7-使用构造函数的形式来模拟类的继承.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>使用构造函数的形式来还原类的继承</title>
+  <title>使用构造函数的形式来模拟类的继承</title>
 </head>
 
 <body>
 
   <script>
 
-    // 如果你能用es5的语法 模拟出这个 es6 / ts的 class和new对象，那么你就对  原型链、class理解足够深刻了
+    // 用 es5的语法 模拟出 es6 类的继承
 
     function GrandPa(name, age) {
       this.name = name;
