类的多重继承

--- a/35-class类/6-类的继承.html
+++ b/35-class类/6-类的继承.html
@@ -17,11 +17,18 @@
 
   call 的 第一个参数 就是 this 所要指向 的 那个对象，后面的参数 则是 函数调用时 所需的参数。<br><br>
 
+
   <h2>super 关键字</h2>
 
   super这个关键字，既可以当作 函数 使用，也可以当作 对象 使用，在这两种情况下，它的用法完全不同。 <br><br>
 
-  第一种情况，super 作为 函数调用 时，代表 父类的构造函数。ES6 要求，子类的constructor()构造函数中 必须执行一次super()函数，这是必须的，否则报错。<br><br>
+  第一种情况，super 作为 函数调用 时，代表 父类的构造函数。<br><br>
+
+  在 子类的 constructor() 构造函数中 调用 super()函数，就会让 子类实例 具有 父类实例 的 属性。 <br><br>
+
+  注意：ES6 规定 子类 继承 父类 ，必须 在 子类的 constructor() 构造函数中 执行一次 super()函数，这是必须的，否则报错。<br><br>
+
+
 
   <script>
 
