--- a/brower/1-浏览器中的进程与线程.html
+++ b/brower/1-浏览器中的进程与线程.html
@@ -42,6 +42,60 @@
   浏览器 会为 每个Tab标签页 分配 一个渲染进程，也就是 我们常说 的 浏览器内核 （渲染进程），这 可以 避免 单个 页面奔溃 影响 整个浏览器。<br><br>
   当 用户 打开一个新的标签页 或者 输入一个UR L时，浏览器 会分配 一个新的渲染进程 来处理 该页面的渲染。 <br><br>
 
+
+  <h2>渲染进程内包括哪些线程</h2>
+  渲染进程 内部 包括 : GUI渲染线程、JavaScript引擎线程、事件触发线程、定时器触发线程 和 异步HTTP请求线程，<br><br>
+  这些线程 均在 渲染进程 中 运行，它们 各自负责 不同的任务，最终 协同完成 网页的渲染 和 交互功能。<br><br>
+
+
+  <h3>GUI渲染线程 (Rendering Thread)</h3>
+  GUI渲染 线程 负责 将 HTML、CSS和JavaScript转换为可视化的网页内容，实现网页的渲染 和 绘制。 <br><br>
+  渲染线程 会将 渲染结果 提交给 合成线程 进行合成，最终呈现在屏幕上。 <br><br>
+
+  当 界面 需要 重绘(Repaint) 或 由于某种操作 引发 回流(reflow) 时， GUI渲染线程 就会执行。 <br><br><br>
+
+  <b>回流（重排）</b>：回流(reflow) 也叫做 重排 。当 元素的尺寸 或者 位置 发生了变化，就需要 重新计算 渲染树， <br><br>
+  这就是回流，比如元素的宽高、位置，浏览器会重新渲染页面，称为回流，又叫重排（layout） <br><br><br>
+
+  <b>重绘</b> ：当 元素样式 的 改变 不影响 页面布局 时，比如元素的颜色，浏览器将对元素进行的更新，称之为重绘。 <br><br><br>
+
+  当 计算 好 盒模型的位置、大小及其他属性后，浏览器 根据 每个盒子特性 进行 绘制。 <br><br>
+  解析 HTML，生成DOM树； 解析CSS，生成CSSOM树，将 DOM树 和 CSSOM树 结合，生成 渲染树(Render Tree)。 <br><br><br>
+
+  Layout(回流): 根据 生成 的 渲染树，进行 回流(Layout)，得到 节点 的 几何信息（位置，大小） <br><br>
+  Painting(重绘) : 根据 渲染树 以及 回流 得到的 几何信息，得到 节点的 绝对像素 <br><br>
+  Display: 将 像素 发送给 GPU，展示在页面上。 <br><br><br>
+
+  <b>回流 必定 会触发 重绘，重绘 不一定 会触发 回流。重绘的开销 较小，回流的代价 较高。</b> <br><br>
+  <b>当 DOM 样式 发生了变化，但 没有影响 到 页面布局 时，会触发 重绘，而不会触发回流。</b> <br><br>
+
+
+
+  <h3>事件触发线程 (Event Thread)</h3>
+  事件触发 线程 负责处理 JavaScript代码 中 的 事件，如鼠标点击、滚轮滑动 等。 <br><br>
+  当 事件 被触发 时，会将 事件 添加 到 队列 中，等待事件循环线程来处理。 <br><br>
+  当 一个事件 被触发时 ，该 线程 会把 事件 添加到 待处理队列 的 队尾，等待 JS引擎 的处理。 <br><br>
+  这些事件 可以是 当前执行的代码块 如 定时任务、也可来自 浏览器内核的其他线程 如 鼠标点击、AJAX异步请求等， <br><br>
+  但,由于JS的单线程关系 所有这些事件 都得 排队等待 JS引擎 处理。 <br><br>
+
+  <h3>定时器触发线程 (Timer Thread)</h3>
+  定时器触发 线程 负责处理 JavaScript中的 定时器，定时器 能使 JavaScript代码 在 指定的时间 间隔内 执行。 <br><br>
+  浏览器 定时计数器 并不是由 JavaScript 引擎 计数 的, 因为 JavaScript 引擎是单线程的, <br><br>
+  如果处于阻塞线程状态就会影响记计时的准确, 因此通过单独线程来计时并触发定时是更为合理的方案。 <br><br>
+
+  <h3>异步HTTP请求线程 (XMLHttpRequest)</h3>
+  异步HTTP请求 线程 负责处理 JavaScript代码 中 的 异步HTTP请求，以 避免阻塞 JavaScript引擎线程 的 执行。 <br><br>
+  在 XMLHttpRequest 在连接后 是通过 浏览器 新开 一个线程 请求， 将 检测到 状态变更 时， <br><br>
+  如果 设置有 回调函数，异步线程 就产生 状态变更 事件 放到 JavaScript引擎 的 处理队列中 等待处理。 <br><br>
+
+  <h3>JavaScript引擎线程 (JavaScript Engine Thread)</h3>
+  Javascript 引擎 （V8引擎），也可以称为 JS内核，主要负责处理 Javascript 脚本程序。 <br><br>
+  JavaScript引擎线程 理所当然是 负责 解析 和 执行 JavaScript代码， <br><br>
+  由于 JavaScript 是可以操纵 DOM 的，如果在 修改 这些元素属性，同时渲染界面（即 JavaScript 线程和GUI线程同时运行）， <br><br>
+  那么 渲染线程 前后 获得的元素数据 就可能不一致了。因此，为了防止渲染出现不可预期的结果， <br><br>
+  浏览器 设置 GUI 渲染线程 与 JavaScript 引擎 为 互斥的关系，当 JavaScript 引擎执行时 GUI 线程 会被 挂起， <br><br>
+  GUI 更新 会被 保存在 一个队列中 等到 JS引擎线程 空闲时 立即被执行。 <br><br>
+
 </body>
 
 </html>
