null  的 使用场景

--- a/3-变量、数据类型、常量/undefined和null基本数据类型.html
+++ b/3-变量、数据类型、常量/undefined和null基本数据类型.html
@@ -9,19 +9,39 @@
 
 <body>
   <script>
+
     let age;    // 声明变量 但是未赋值
+
     console.log(age);  // 输出 undefined
 
     let obj = null;
+
     console.log(obj);   //null
 
     // null  和 undefined 的区别
-    // undefined 表示 没有赋值
-    // null 表示 赋值了 ，但是 内容未空 。是有值的，但是是空值。
+
+    // undefined 表示 仅声明，但没有赋值
+
+    // null 表示 赋值了 ，但是 内容未空 。是 有值的，但是是空值。
 
     // 计算有区别
     console.log(undefined + 1);   // NaN
+
     console.log(null + 1);   // 1
+
+
+    // 使用 null 作为占位符 的 场景
+
+    // 对象初始化：在创建对象时，如果某些属性在对象创建时还没有具体的值，可以将这些属性初始化为 null。这表示这些属性将来会被赋予具体的值。
+
+    // 数据库操作：在查询数据库时，如果某个字段在数据库中不存在对应的值（例如，一个可选字段），那么从数据库检索到的对象可能会将该字段的值设为 null。
+
+    // 函数返回值：如果一个函数在某些情况下无法返回有效的结果（例如，因为找不到匹配的记录），它可以返回 null 来表示“无结果”或“未找到”。
+
+    // 异步编程：在异步编程中，null 可以用来表示某个值尚未准备好或尚未被计算出来。
+    //          例如，在JavaScript的Promise中，一个尚未解决的Promise可能会用 null（或更常见的是 undefined 或一个特殊的pending状态）来表示其值尚未确定。
+
+    // 注意：  虽然 null 可以用作占位符，但过度使用可能会降低代码的可读性和可维护性。
 
   </script>
 </body>
